--- a/deployment.yaml
+++ b/deployment.yaml
@@ -24,8 +24,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: noteapp-service-svc
-  annotations:
-    cloud.google.com/load-balancer-ipv4: "noteapp-service-external-ip"
+#  annotations:
+#    cloud.google.com/load-balancer-ipv4: "noteapp-service-external-ip"
 spec:
   type: ClusterIP
   ports:
